# legacy-iolsucker

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NOTES  README  TODO  autobuild.sh  autogen.sh  configure.ac
admin/: Makefile.common  acinclude.m4  db.m4
admin/extra/: curl.m4
debian/: Makefile.am  changelog  control  copyright  menu  rules
doc/: .cvsignore  Doxyfile  Makefile.am  iolsucker.1  iolsucker.1.in  iolwizard.1.in
extra/: Makefile.am
extra/inst/: Makefile.am  iolsucker.nsi
iolunch/: Makefile.am  iolunch.c
iolwizard/: .cvsignore  Makefile.am  dirbrowser.c  dirbrowser.h  dirent.c  error_dlg.c  error_dlg.h  main.c  ui.c  ui.h
lib/: Makefile.am
src/: .cvsignore  Makefile.am  ask_pass.c  ask_pass.h  cache.c  cache.h  cache_db.c  cache_dummy.c  common.c  common.h  config.c  course.c  course.h  curlerr.c  demo.c  fconfig.h  forum.c  forum.h  gendebug.sh  getpass.c  getpass.h  i18n.h  iol.c  iol.cpp  iol.h  iolcommon.h  iolerr.c  link.c  link.h  link_debug.c  main.c  main.cpp  main.h  opt.c  progress.c  progress.h  strdup.c  strdup.h  stringset.c  stringset.h  (+7 more)
src/demo/: 22.91  Makefile.am  login.html  mynav.html  newmaterialdid.html
win32/: Makefile.am  config.h
win32/iolsucker/: Makefile.am  iolsucker.dsp  iolsucker.dsw  iolsucker.mak  iolsucker.rc
win32/iolunch/: Makefile.am  iolunch.dsp
win32/iolwizard/: Makefile.am  iolwizard.dep  iolwizard.dsp  iolwizard.dsw  iolwizard.mak  iolwizard.rc  resource.h
win32/libmisc/: Makefile.am  libmisc.dep  libmisc.dsp  libmisc.mak
